Cleaner: Do not commit each time after 1000 documents

Patch submitted by 191c4ec3@opayq.com

BUG: 333807
FIXED-IN: 4.13.1